# DOIer

./: Cargo.toml  install.sh
.github/workflows/: build.yml  ci.yml  release.yml
src/: cli.rs  lib.rs  templates.rs
src/config/: constant.rs
src/endpoints/: doi.rs  favicon.rs  index.rs  mod.rs  routes.rs
src/html/: base.html  doi.html  doi_content.html  index.html  index_content.html
src/utils/: doi.rs  mod.rs  paper.rs
