[package]
name = "doi"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls", "brotli", "stream", "gzip", "deflate", "cookies"] }
tokio = { version = "1.48", default-features = false, features = ["rt-multi-thread", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sea-orm = { version = "1.1", features = [ "sqlx-postgres", "runtime-async-std-rustls", "macros" ] }
actix-files = "0.6"
actix-multipart = "0.7"
actix-web = "4.11"
actix-web-grants = "4.1"
actix-web-httpauth = "0.8"
actix-web-lab = "0.24"
actix-web-static-files = "4.1"
futures-util = "0.3"
percent-encoding = "2.3"

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.5"

[target.'cfg(not(all(target_env = "musl")))'.dependencies.mimalloc]
version = "0.1"
features = ["secure"]

[[bin]]
name = "doi"
path = "src/cli.rs"

[lib]
name = "ld_"
path = "src/lib.rs"

[profile.release]
lto = false
strip = true
panic = 'abort'
opt-level = 3
codegen-units = 1